# silent-speech-interface

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/raw/yes/: yes_ABD.npy  yes_RIS.npy  yes_STRN.npy  yes_STY.npy
emg-yes-no-classifier/notebooks/: 02_model_training.ipynb
metadata/: blocks.csv  quarantine_blocks.csv  trials.csv
metadata/agagcl/matched/: blocks.csv  features.csv  trials.csv
metadata/agagcl/matched_budget/: features.csv
notebooks/: 01_data_exploration.ipynb  test_model.ipynb
processed/trials/: trial_000001.npy  trial_000002.npy  trial_000003.npy  trial_000004.npy  trial_000005.npy  trial_000006.npy  trial_000007.npy  trial_000008.npy  trial_000009.npy  trial_000010.npy  trial_000011.npy  trial_000012.npy  trial_000013.npy  trial_000014.npy  trial_000015.npy  trial_000016.npy  trial_000017.npy  trial_000018.npy  trial_000019.npy  trial_000020.npy  trial_000021.npy  trial_000022.npy  trial_000023.npy  trial_000024.npy  trial_000025.npy  trial_000026.npy  trial_000027.npy  trial_000028.npy  trial_000029.npy  trial_000030.npy  trial_000031.npy  trial_000032.npy  trial_000033.npy  trial_000034.npy  trial_000035.npy  trial_000036.npy  trial_000037.npy  trial_000038.npy  trial_000039.npy  trial_000040.npy  (+1897 more)
splits/: by_block.json  by_session.json
src/: __init__.py  compare_electrodes.py  config.py  data_loader.py  model.py  preprocessing.py  print_array.py  recordings.py  train.py
src/preprocessing/: __init__.py  pipeline.py  preprocessing.py
tests/: test_preprocessing_pipeline.py  test_recordings_and_comparison.py
(+2447 files in other folders)
